[root-scroller] Don't promote when ancestor is scrollable

If we have a candidate implicit root scroller, we should only promote it
if it doesn't have a scrollable ancestor. The reason for this is that we
end scroll chaining at the root scroller. This is necessary as the root
scroller consumes all scroll in the form of overscroll effects. A (user)
scrollable ancestor would be broken in this case, as shown in the
example on the attached bug.

Note: overflow in an ancestor is still allowed, as long as its overflow
style is hidden or visible.

Bug: 837007
Change-Id: Ied7a9f02eab76c4ea59fced94d0804ba47ef4e4a
Reviewed-on: https://chromium-review.googlesource.com/c/1351590
Reviewed-by: Dave Tapuska <dtapuska@chromium.org>
Commit-Queue: David Bokan <bokan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#611245}
Former-commit-id: 59d9ba119448a269289d57e7c3d23a7f04f19248